--- a/03_luxury-contact.html
+++ b/03_luxury-contact.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" href="03_images/icon.png" type="image/gif" sizes="16x16">
-    <title>Baresto - Cafe, Bar & Restaurant Website Template</title>
+    <link rel="icon" href="03_images/icon.ico"" type="image/gif" sizes="16x16">
+    <title>Check & Mate - Cafe & Dine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -37,7 +37,7 @@
                     <div class="col-md-12">
                         <!-- logo begin -->
                         <div id="logo">
-                            <a href="03_luxury-index.html">
+                            <a href="index.html">
                                 <img class="logo logo_dark_bg" src="03_images/logo.png" alt="">
                                 <img class="logo logo_light_bg" src="03_images/logo.png" alt="">
                             </a>
@@ -51,7 +51,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a href="03_luxury-index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="03_luxury-menu.html">menu</a></li>
                                 <li><a href="03_luxury-booking.html">Booking</a></li>
                                 <li><a href="03_luxury-about.html">About</a>
@@ -161,9 +161,10 @@
                 <div class="row g-4 align-items-center">
                     <div class="col-lg-4 sm-text-center">
                         <h3>Our Location</h3>
-                        Collins Street West, Victoria 8007 Australia<br>
-                        T. (208) 333 9296<br>
-                        E. contact@baresto.com<br>
+                        Plot no-114,block-FC,sector-3,saltlake city, Kolkata, India,700091<br>
+                        Mobile: <a href="tel:+919748305061">9748305061</a><br>
+                        <a href="https://wa.me/917980795046">Whatsapp: 7980795046</a><br>
+                        Email:<a href="mailto:paultrisha493@gmail.com">paultrisha493@gmail.com</a>  <br>
                     </div>
                     <div class="col-lg-4 text-center">
                         <img class="logo" src="03_images/logo.png" alt="">
