--- a/03_luxury-menu.html
+++ b/03_luxury-menu.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" href="03_images/icon.png" type="image/gif" sizes="16x16">
-    <title>Check & Mate</title>
+    <link rel="icon" href="03_images/icon.ico"" type=" image/gif" sizes="16x16">
+    <title>Check & Mate - Cafe & Dine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -37,7 +37,7 @@
                     <div class="col-md-12">
                         <!-- logo begin -->
                         <div id="logo">
-                            <a href="03_luxury-index.html">
+                            <a href="index.html">
                                 <img class="logo logo_dark_bg" src="03_images/logo.png" alt="">
                                 <img class="logo logo_light_bg" src="03_images/logo.png" alt="">
                             </a>
@@ -51,7 +51,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a href="03_luxury-index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="03_luxury-menu.html">menu</a></li>
                                 <li><a href="03_luxury-booking.html">Booking</a></li>
                                 <li><a href="03_luxury-about.html">About</a>
@@ -97,113 +97,93 @@
                         <div class="col-lg-5">
 
                             <h2>Hokaah Menu</h2>
-                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE SINGLE FLAVOURS) @ ₹399/- </h5>
+                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE SINGLE FLAVOURS) <br> @ ₹399/- </h5>
 
                             <div class="spacer-half"></div>
 
                             <div class="menu-item">
                                 <div class="c1">FRUIT FLAVOURS
-                                    <ul style="list-style-type: disc;">
-                                        <li><span>KIWI</span></li>
-                                        <li><span>GRAPE</span></li>
-                                        <li><span>VANILLA</span></li>
-                                        <li><span>ORANGE</span></li>
-                                        <li><span>BLUEBARRY</span></li>
-                                        <li><span>STRAWBERY</span></li>
-                                        <li><span>WATERMELON</span></li>
-                                        <li><span>MILON</span></li>
-                                        <li><span>TWO APPLE</span></li>
-                                        <li><span>GUAVA</span></li>
-                                        <li><span>MANGO</span></li>
-                                        <li><span>PEACH</span></li>
-                                    </ul>
+                                    <span>KIWI</span>
+                                    <span>GRAPE</span>
+                                    <span>VANILLA</span>
+                                    <span>ORANGE</span>
+                                    <span>BLUEBARRY</span>
+                                    <span>STRAWBERY</span>
+                                    <span>WATERMELON</span>
+                                    <span>MILON</span>
+                                    <span>TWO APPLE</span>
+                                    <span>GUAVA</span>
+                                    <span>MANGO</span>
+                                    <span>PEACH</span>
                                 </div>
                                 <div class="c1">PAN FLAVOURS
-                                    <ul>
-                                        <li><span>PAAN MASTI</span></li>
-                                        <li><span>PAN RAAS</span></li>
-                                        <li><span>MEETHA PAN</span></li>
-                                        <li><span>GULABI PAN</span></li>
-                                    </ul>
+                                    <span>PAAN MASTI</span>
+                                    <span>PAN RAAS</span>
+                                    <span>MEETHA PAN</span>
+                                    <span>GULABI PAN</span>
                                     <br>
 
                                     <div class="c1">OTHER FLAVOURS
-                                        <ul>
-                                            <li><span>COCKTAIL</span></li>
-                                            <li><span>MINT</span></li>
-                                            <li><span>GUM</span></li>
-                                            <li><span>BRAIN FREEZE UP </span></li>
-                                            <li><span>CARDAMOM</span></li>
-                                            <li><span>SUPARI</span></li>
-                                            <li><span>SPRING WATER</span></li>
-                                        </ul>
-
+                                        <span>COCKTAIL</span>
+                                        <span>MINT</span>
+                                        <span>GUM</span>
+                                        <span>BRAIN FREEZE UP </span>
+                                        <span>CARDAMOM</span>
+                                        <span>SUPARI</span>
+                                        <span>SPRING WATER</span>
                                     </div>
 
                                 </div>
                                 <div class="c1">
                                 </div>
                             </div>
-                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE DOUBLE FLAVOURS) @ ₹499/-</h5>
+                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE DOUBLE FLAVOURS) <br> @ ₹499/-</h5>
 
                             <div class="spacer-half"></div>
 
                             <div class="menu-item">
                                 <div class="c1">FLAVOURS
-                                    <ul style="list-style-type: disc;">
-                                        <li><span>GUM & SUPARI</span></li>
-                                        <li><span>GRAPE & MINT</span></li>
-                                        <li><span>DOUBLE APPLE & MINT</span></li>
-                                        <li><span>GUM & CARDAMOM</span></li>
-                                        <li><span>BLUEBERRY & SPRING WATER</span></li>
-                                        <li><span>BRAIN FREEZE UP</span></li>
-                                        <li><span>GULABI PAN</span></li>
-                                    </ul>
+                                    <span>GUM & SUPARI</span>
+                                    <span>GRAPE & MINT</span>
+                                    <span>DOUBLE APPLE & MINT</span>
+                                    <span>GUM & CARDAMOM</span>
+                                    <span>BLUEBERRY & SPRING WATER</span>
+                                    <span>BRAIN FREEZE UP</span>
+                                    
+                                    <span>STRAWBERY & WATERMELON</span>
 
                                 </div>
                                 <div class="c1"><br>
-                                    <ul>
-                                        <li><span>KIWI & SPRING WATER</span></li>
-                                        <li><span>GRAPE & RASNA</span></li>
-                                        <li><span>ORANGE & RASNA</span></li>
-                                        <li><span>WATERMELON & MINT</span></li>
-                                        <li><span>STRAWBERY & WATERMELON</span></li>
-                                        <li><span>TEEN PAN ROSE</span></li>
-                                        <li><span>COCKTAIL</span></li>
-                                    </ul>
+                                    <span>KIWI & SPRING WATER</span>
+                                    <span>GRAPE & RASNA</span>
+                                    <span>ORANGE & RASNA</span>
+                                    <span>WATERMELON & MINT</span>
+                                    <span>GULABI PAN</span>
+                                    <span>TEEN PAN ROSE</span>
+                                    <span>COCKTAIL</span>
 
                                 </div>
                             </div>
 
-                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE TRIPLE FLAVOURS) @ ₹699/-</h5>
+                            <h5 class="uptitle">MAKE YOUR OWN (CHOICE TRIPLE FLAVOURS) <br>@ ₹699/-</h5>
 
                             <div class="spacer-half"></div>
 
                             <div class="menu-item">
                                 <div class="c1">FLAVOURS
-                                    <ul>
-                                        <li><span>GUM & SUPARI & MINT</span></li>
-                                        <li><span>WATERMELON & RASNA & MINT</span></li>
-                                        <li><span>KIWI & SPRING WATER & MINT</span></li>
-                                        <li><span>GUM & CARDAMOM & SUPARI</span></li>
-                                        <li><span>GULABI PAN & PAN RAAS & SUPARI</span></li>
-                                        <li><span>MANGO & GRAPE & VANILLA</span></li>
-                                        <li><span>BLUEBERRY & STRAWBERRY & WATERMELON</span></li>
-                                    </ul>
-
-
+                                    <span>GUM & SUPARI & MINT</span>
+                                    <span>WATERMELON & RASNA & MINT</span>
+                                    <span>KIWI & SPRING WATER & MINT</span>
+                                    <span>GUM & CARDAMOM & SUPARI</span>
+                                    <span>GULABI PAN & PAN RAAS & SUPARI</span>
+                                    <span>MANGO & GRAPE & VANILLA</span>
+                                    <span>BLUEBERRY & STRAWBERRY & WATERMELON</span>
+                                    <span>ORANGE,RASNA & PAN RAAS</span>
+                                    <span>BRAIN FREEZE UP,MINT & GUM</span>
+                                    <span>PAN MASTI,MITHA PAN & GULABI PAN</span>
+                                    <span>MELON,WATERMELON &SUPARI</span>
                                 </div>
-                                <div class="c1" style="font-size: 14px;"><BR>
-                                    <ul>
-                                        <li><span>ORANGE,RASNA & PAN RAAS</span></li>
-                                        <li><span>BRAIN FREEZE UP,MINT & GUM</span></li>
-                                        <li><span>PAN MASTI,MITHA PAN & GULABI PAN</span></li>
-                                        <li><span>MELON,WATERMELON &SUPARI</span></li>
 
-                                    </ul>
-
-
-                                </div>
                             </div>
                             <h5 class="uptitle">HOUSE SPECIAL @ ₹2199 (FOR 6 PAX)</h5>
 
@@ -530,7 +510,7 @@
 
 
 
-                            
+
 
 
 
@@ -1104,9 +1084,10 @@
                 <div class="row g-4 align-items-center">
                     <div class="col-lg-4 sm-text-center">
                         <h3>Our Location</h3>
-                        Collins Street West, Victoria 8007 Australia<br>
-                        T. (208) 333 9296<br>
-                        E. contact@baresto.com<br>
+                        Plot no-114,block-FC,sector-3,saltlake city, Kolkata, India,700091<br>
+                        Mobile: <a href="tel:+919748305061">9748305061</a><br>
+                        <a href="https://wa.me/917980795046">Whatsapp: 7980795046</a><br>
+                        Email:<a href="mailto:paultrisha493@gmail.com">paultrisha493@gmail.com</a> <br>
                     </div>
                     <div class="col-lg-4 text-center">
                         <img class="logo" src="03_images/logo.png" alt="">
