--- a/03_luxury-blog-single.html
+++ b/03_luxury-blog-single.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="icon" href="03_images/icon.png" type="image/gif" sizes="16x16">
-    <title>Baresto - Cafe, Bar & Restaurant Website Template</title>
+    <title>Check & Mate - Cafe & Dine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -36,7 +36,7 @@
                     <div class="col-md-12">
                         <!-- logo begin -->
                         <div id="logo">
-                            <a href="03_luxury-index.html">
+                            <a href="index.html">
                                 <img class="logo logo_dark_bg" src="03_images/logo.png" alt="">
                                 <img class="logo logo_light_bg" src="03_images/logo.png" alt="">
                             </a>
@@ -50,7 +50,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a href="03_luxury-index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="03_luxury-menu.html">menu</a></li>
                                 <li><a href="03_luxury-booking.html">Booking</a></li>
                                 <li><a href="03_luxury-about.html">About</a>
@@ -85,11 +85,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="03_luxury-index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="03_luxury-blog.html">Blog</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">10 Reasons To Drink Coffee Every Day</li>
-                    </ol>
+                    
                 </div>
             </div>
         </section>
@@ -336,10 +332,10 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-lg-4 sm-text-center">
-                        <h3>Our Location</h3>
-                        Collins Street West, Victoria 8007 Australia<br>
-                        T. (208) 333 9296<br>
-                        E. contact@baresto.com<br>
+                        Plot no-114,block-FC,sector-3,saltlake city, Kolkata, India,700091<br>
+                        Mobile: <a href="tel:+919748305061">9748305061</a><br>
+                        <a href="https://wa.me/917980795046">Whatsapp: 7980795046</a><br>
+                        Email:<a href="mailto:paultrisha493@gmail.com">paultrisha493@gmail.com</a>  <br>
                     </div>
                     <div class="col-lg-4 text-center">
                         <img class="logo" src="03_images/logo.png" alt="">
