--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <div class="container">
                     <div class="row g-4">
                         <div class="col-lg-6 offset-lg-3 text-center">
-                            <h5 class="uptitle wow fadeInUp">22,000+</h5>
+                            <h5 class="uptitle wow fadeInUp">99.5%</h5>
                             <h2 class="wow fadeInUp">Happy Customers</h2>
                             <p class="lead wow fadeInUp">Happy diners, happy hearts! Join the delighted ranks of our satisfied customers and experience culinary excellence like never before.</p>
                         </div>
@@ -345,7 +345,7 @@
                                 <div class="d-testi">
                                     An absolute gem! The food was exquisite, service impeccable, and ambiance delightful. Can't wait to return!
                                 </div>
-                                <div class="d-testi-by">Karyn Deely<span>Jan 20, 2024</span></div>
+                                <div class="d-testi-by">Sourav Sadhukhan<span>May 02, 2024</span></div>
                                 <div class="d-stars">
                                     <img src="03_images/reviews/google-stars.png" class="" alt="">
                                 </div>
@@ -355,14 +355,14 @@
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".1s">
                             <div class="de-review-app h-100">
                                 <div class="d-logo">
-                                    <img src="03_images/reviews/trustpilot.png" class="" alt="">
+                                    <img src="03_images/reviews/google.png" class="" alt="">
                                 </div>
                                 <div class="d-testi">
                                     Absolutely phenomenal! The chef's dedication to quality ingredients shines through in every dish.
                                 </div>
-                                <div class="d-testi-by">Josefa Devany<span>Jan 20, 2024</span></div>
+                                <div class="d-testi-by">Avisek Ghosh<span>April 20, 2024</span></div>
                                 <div class="d-stars">
-                                    <img src="03_images/reviews/trustpilot-stars.svg" class="" alt="">
+                                    <img src="03_images/reviews/google-stars.png"" class="" alt="">
                                 </div>
                             </div>
                         </div>
@@ -375,7 +375,7 @@
                                 <div class="d-testi">
                                     An unforgettable dining experience. Every course was a delightful surprise, perfectly complemented by impeccable service.
                                 </div>
-                                <div class="d-testi-by">Samual Stein<span>Jan 20, 2024</span></div>
+                                <div class="d-testi-by">Shrestha<span>April 26, 2024</span></div>
                                 <div class="d-stars">
                                     <img src="03_images/reviews/google-stars.png" class="" alt="">
                                 </div>
@@ -531,7 +531,7 @@
                 </div>
             </section>
 
-            <section>
+           <!-- <section>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -595,7 +595,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <section class="side-bg no-top no-bottom text-light" aria-label="section" data-bgcolor="rgba(255, 255, 255, .05)">
                 <div class="col-lg-6 pull-right image-container jarallax">
@@ -613,7 +613,7 @@
                                 </div>
                                 <blockquote>
                                     As a busy professional, I rely on my morning coffee to kickstart my day. The rich, smooth taste and heavenly aroma never fail to perk me up and get me ready to tackle whatever the day throws at me. It's like a little slice of heaven in a cup!
-                                    <span>Jenna Smith</span>
+                                    <span>Sourav</span>
                                 </blockquote>
                             </div>
                         </div>
@@ -630,7 +630,7 @@
                         </div>
 
                         <div class="col-lg-3 text-lg-end text-sm-center wow fadeIn" data-wow-delay=".2s">
-                            <a href="03_luxury-booking.html" class="btn-line">Call Us Now</a>
+                            <a href="tel:+919748305061" class="btn-line">Call Us Now</a>
                         </div>
                     </div>
                 </div>
