--- a/03_luxury-about.html
+++ b/03_luxury-about.html
@@ -137,14 +137,14 @@
                                 <div class="col-6">
                                     <img src="03_images/misc/4.jpg" class="img-fluid mb-4 wow zoomIn" alt="">
                                     <div class="de_count wow fadeInUp">
-                                        <h3><span class="timer" data-to="750" data-speed="3000"></span>+</h3>
-                                        <h4>Positive feedbacks</h4>
+                                        <h3><span class="timer" data-to="150" data-speed="3000"></span>+</h3>
+                                        <h4>Items to try</h4>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="de_count wow fadeInUp">
-                                        <h3><span class="timer" data-to="50" data-speed="3000"></span>%</h3>
-                                        <h4>Turnover increased</h4>
+                                        <h3><span class="timer" data-to="99.3" data-speed="3000"></span>%</h3>
+                                        <h4>Positive Feedback</h4>
                                     </div>
                                     <div class="spacer-10"></div>
                                     <img src="03_images/misc/5.jpg" class="img-fluid mt-4 wow zoomIn" alt="">
@@ -157,7 +157,7 @@
             <!-- section close -->
 
 
-            <section data-bgcolor="rgba(255, 255, 255, .05)">
+           <!-- <section data-bgcolor="rgba(255, 255, 255, .05)">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
         </div>
 
