--- a/03_luxury-contact.html
+++ b/03_luxury-contact.html
@@ -99,9 +99,10 @@
                     <div class="row g-4">
                         <div class="col-lg-4 sm-text-center">
                             <h3>Our Location</h3>
-                            Collins Street West, Victoria 8007 Australia<br>
-                            T. (208) 333 9296<br>
-                            E. contact@baresto.com<br>
+                            Plot no-114,block-FC,sector-3,saltlake city, Kolkata, India,700091<br>
+                            Mobile: <a href="tel:+919748305061" style="color: white ;">9748305061</a><br>
+                            Whatsapp: <a href="https://wa.me/917980795046" style="color: white ;">7980795046</a><br>
+                            Email:<a href="mailto:paultrisha493@gmail.com" style="color: white ;">paultrisha493@gmail.com</a>  <br>
                         </div>
 
                         <div class="col-lg-8">
